--- a/assets/stylus/main.styl
+++ b/assets/stylus/main.styl
@@ -1,5 +1,2 @@
-/** Stylus Styles */
-
-// Available variables https://github.com/vuetifyjs/vuetify/blob/master/src/stylus/settings/_variables.styl
-
-@import '../../node_modules/vuetify/src/stylus/main'
+body
+	font-family Roboto
